# JUCE

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  emscripten.cmake  genki-emscripten.cmake
examples/: CMakeLists.txt
examples/Assets/: DemoUtilities.h
examples/DemoRunner/: CMakeLists.txt
examples/DemoRunner/Source/: Main.cpp
examples/DemoRunner/Source/Demos/: DemoPIPs1.cpp  DemoPIPs2.cpp  JUCEDemos.cpp
examples/DemoRunner/Source/UI/: DemoContentComponent.h  MainComponent.cpp  MainComponent.h
examples/Dreamtonics/: CMakeLists.txt  juce_emscripten.jucer
examples/Dreamtonics/JuceLibraryCode/: AppConfig.h  JuceHeader.h
modules/: CMakeLists.txt
modules/juce_audio_basics/mpe/: juce_MPEZoneLayout.h
modules/juce_audio_devices/: juce_audio_devices.cpp
modules/juce_audio_devices/audio_io/: juce_AudioIODeviceType.cpp
modules/juce_audio_devices/midi_io/: juce_MidiDevices.h
modules/juce_audio_devices/native/: juce_Midi_windows.cpp  juce_wasm_Audio.cpp  juce_wasm_Midi.cpp  juce_win32_Midi.cpp
modules/juce_audio_devices/native/emscripten/: RtMidi.cpp  RtMidi.h
modules/juce_audio_plugin_client/utility/: juce_CheckSettingMacros.h
modules/juce_audio_processors/: juce_audio_processors.cpp  juce_audio_processors.h
modules/juce_audio_processors/processors/: juce_AudioProcessor.cpp  juce_AudioProcessor.h
modules/juce_audio_processors/utilities/: juce_PluginHostType.cpp  juce_PluginHostType.h
modules/juce_audio_utils/: juce_audio_utils.cpp
modules/juce_core/: juce_core.cpp
modules/juce_core/containers/: juce_ElementComparator.h
modules/juce_core/files/: juce_File.cpp
modules/juce_core/misc/: juce_Uuid.cpp  juce_Uuid.h
modules/juce_core/native/: juce_linux_Files.cpp  juce_linux_SystemStats.cpp  juce_posix_IPAddress.h  juce_posix_NamedPipe.cpp  juce_posix_SharedCode.h  juce_wasm_SystemStats.cpp
modules/juce_core/network/: juce_Socket.cpp  juce_URL.h
modules/juce_core/system/: juce_SystemStats.cpp  juce_TargetPlatform.h
modules/juce_core/time/: juce_Time.cpp
modules/juce_events/: juce_events.cpp
modules/juce_events/messages/: juce_Initialisation.h  juce_MessageManager.cpp
modules/juce_events/native/: juce_wasm_Messaging.cpp
modules/juce_graphics/contexts/: juce_LowLevelGraphicsPostScriptRenderer.h
modules/juce_graphics/images/: juce_Image.cpp
modules/juce_gui_basics/: juce_gui_basics.cpp
modules/juce_gui_basics/drawables/: juce_SVGParser.cpp
modules/juce_gui_basics/native/: juce_wasm_FileChooser.cpp  juce_wasm_Windowing.cpp
modules/juce_gui_extra/native/: juce_SystemTrayIcon_mac.cpp  juce_mac_SystemTrayIcon.cpp
modules/juce_opengl/: juce_opengl.cpp  juce_opengl.h
modules/juce_product_unlocking/marketplace/: juce_OnlineUnlockStatus.cpp
